# upd-indicator

./: .env  .gitignore  NOTES.md  README.md  local-install.sh  package.json  pyproject.toml  upd_indicator.sh  upd_monitor.sh
.devcontainer/: devcontainer.json  vsc-install-pnpm.sh  vsc-utils.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.uvextras/: uvextras.yaml
docs/: README.md  architecture-desgn.md
etc/: check-4-upds.sh  rules.json  settings.json.in  upd-indicator-monitor.service.in  upd-indicator-monitor.timer  upd_monitor.sh.in
etc/scripts/: dns-health.py  fedora-dev-dx-has-updates.sh  fedora-python-dx-has-updates.sh  pdm-has-updates.sh  pi-cluster-health.py
examples/: rules.json  settings.json
examples/phase1-demo/: README.md  cpython-clone-behind.sh  fedora-python-dx-has-updates.sh  phase1-demo.md  rpm-ostree-update-check.sh  rules.json
examples/phase1-dummy-data/: README.md
examples/phase2-demo/: README.md  cpython-clone-behind.sh  rpm-ostree-update-check.sh  settings.json
systemd/: README.md  upd-indicator-monitor.service
upd-indicator@for-many/: README.md  composite-adapter.js  extension.js  interval.js  log.js  metadata.json  monitor.js  polling-adapter.js  prefs.js  random-adapter.js  random-rule.js  stylesheet.css  update-item.js  updates.js
upd-indicator@for-many/common-lib/: log.js  monitor-rule.js  settings.js  update-item.js
upd-indicator@for-many/ext-lib/: interval.js  monitor.js  polling-adapter.js
upd-indicator@for-many/prefs-lib/: about-page.js  monitor-page.js
upd-indicator@for-many/schemas/: org.gnome.shell.extensions.upd-indicator.gschema.xml
upd_indicator/: README.md  __main__.py  cli.py  models.py  settings.py  steps.py  utils.py
upd_monitor/: README.md  __main__.py  cli.py  models.py  settings.py  steps.py  utils.py
