[project]
name = "upd-indicator"
version = "0.1.0"
description = "updates monitoring program for upd-indicator@for-many GNOME extension"
authors = [{ name = "Kevin McWhirter", email = "klmcw@yahoo.com" }]
dependencies = []
requires-python = "==3.14.*"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
]

[tool.autopep8]
max-doc-length = 140
max-line-length = 140

[tool.isort]
multi_line_output = 3
